fixed menu clipping
shouldn't cut off now

--- a/new/common.css
+++ b/new/common.css
@@ -100,7 +100,7 @@ body {
 	line-height: 150%;
 	font-size: 150%;
 	padding: 0.5em;
-	max-height: 100vh;
+	max-height: calc(100vh - 1em);
 	overflow: auto;
 }
 
